<resources>
    <string name="app_name">CRMAppAndroid</string>
    <string name="greeting">Hello!</string>
    <string name="message">in your personal CRM!</string>
    <string name="profile_btn">profile</string>
    <string name="statistics_btn">statistics</string>
    <string name="messages_btn">message</string>
    <string name="score">Score:</string>
    <string name="profile_creating_message">Your profile has been creating!</string>
    <string name="title_random_number">Random between 0 і %1d</string>
    <string name="title_profile">Select profile color</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
</resources>